--- a/Week-2/Index.html
+++ b/Week-2/Index.html
@@ -1,1 +1,13 @@
-Welcome to my Repository on Github
+<!DOCTYPE html>
+<html>
+
+<head>
+<meta charset="UTF=8">
+<title>Week 2 - HTML Text Semantic</title>
+</head>
+
+<body>
+    <h1>Welcome to my Week 2 Website</h1>
+</body>
+
+</html>
